--- a/action.yml
+++ b/action.yml
@@ -2,8 +2,8 @@ name: "action-package-audit"
 author: "smockle"
 description: "Requires 2FA for publishing an npm org’s packages."
 runs:
-  using: "node14"
-  image: "index.mjs"
+  using: "docker"
+  image: "Dockerfile"
 branding:
   icon: "shield"
   color: "blue"
